return search results onscreen